NATTQA-ENV/force-app/main/default/objects/sbaa__Approver__c/fields/sbaa__DelegatedUserId__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DelegatedUserId__c</fullName>
    <description>User associated with the Delegated Approver</description>
    <formula>sbaa__DelegatedApprover__r.sbaa__User__c</formula>
    <inlineHelpText>User associated with the Delegated Approver</inlineHelpText>
    <label>Delegated User Id</label>
    <type>Text</type>
</CustomField>