NATTQA-ENV/force-app/main/default/objects/sbaa__Approver__c/fields/sbaa__DelegationEnd__c.field-meta.xml
<CustomField>
    <fullName>sbaa__DelegationEnd__c</fullName>
    <description>Approval delegations end at the end of this date</description>
    <inlineHelpText>Approval delegations end at the end of this date</inlineHelpText>
    <label>Delegation End</label>
    <type>Date</type>
</CustomField>