NATTQA-ENV/force-app/main/default/objects/sbaa__Approver__c/fields/sbaa__User__c.field-meta.xml
<CustomField>
    <fullName>sbaa__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Approver is a single User, lookup to that User</description>
    <inlineHelpText>If Approver is a single User, lookup to that User</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>