NATTQA-ENV/force-app/main/default/objects/sbaa__Approver__c/listViews/sbaa__All.listView-meta.xml
<ListView>
    <fullName>sbaa__All</fullName>
    <columns>NAME</columns>
    <columns>sbaa__User__c</columns>
    <columns>sbaa__NextApprover__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>